--- a/files/mpfs_fpga_trial_defconfig
+++ b/files/mpfs_fpga_trial_defconfig
@@ -57,7 +57,7 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_POLARFIRE_SOC=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
-CONFIG_I2C_MICROCHIP_CORE=y
+CONFIG_I2C_MICROCHIP_CORE=m
 CONFIG_SPI=y
 CONFIG_SPI_MICROCHIP_CORE=y
 CONFIG_SPI_MICROCHIP_CORE_QSPI=y
@@ -103,11 +103,11 @@ CONFIG_SF_PDMA=y
 CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=y
 CONFIG_UIO_DMEM_GENIRQ=y
-CONFIG_UIO_MICROCHIP_DMA=y
+CONFIG_UIO_MICROCHIP_DMA=m
 CONFIG_MAILBOX=y
 CONFIG_POLARFIRE_SOC_MAILBOX=y
-CONFIG_MCHP_SBI_IPC_MBOX=y
-CONFIG_MIV_IHC=y
+CONFIG_MCHP_SBI_IPC_MBOX=m
+CONFIG_MIV_IHC=m
 CONFIG_REMOTEPROC=y
 CONFIG_REMOTEPROC_CDEV=y
 CONFIG_MIV_REMOTEPROC=y
@@ -122,7 +122,7 @@ CONFIG_IIO_SW_DEVICE=m
 CONFIG_IIO_SW_TRIGGER=m
 CONFIG_PAC1934=m
 CONFIG_PWM=y
-CONFIG_PWM_MICROCHIP_CORE=y
+CONFIG_PWM_MICROCHIP_CORE=m
 CONFIG_RESET_CONTROLLER=y
 CONFIG_FPGA=y
 CONFIG_FPGA_BRIDGE=y
